<?xml version="1.0" encoding="utf-8"?>
<!--
Attributions:
	"settings": 'Gear icon' by 'MGalloway (WMF)', https://commons.wikimedia.org/wiki/File:Gear_icon.svg, edited
	"connectivity": 'Sharethis' by 'ZyMOS', https://commons.wikimedia.org/wiki/File:Sharethis.svg, edited
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  tools:context="main.MainActivity" >
	<item 
		android:id="@+id/addExamples"
		android:title="@string/addExamples" />
	<item
		android:id="@+id/captureImage"
		android:title="@string/captureImage"
		app:showAsAction="always"
		android:icon="@android:drawable/ic_menu_camera" />
	<item
		android:id="@+id/addNewPic"
		android:title="@string/addNewPic"
		app:showAsAction="always"
		android:icon="@android:drawable/ic_menu_add" />
	<item
		android:id="@+id/connMenu"
		android:title="@string/connMenu"
		app:showAsAction="always"
		android:icon="@mipmap/connectivity" />
	<item 
		android:id="@+id/settingsMenu"
		android:title="@string/settingsMenu"
		app:showAsAction="always"
		android:icon="@mipmap/settings" />
	<item
		android:id="@+id/infoDialog"
		android:title="@string/infoDialogTitle"
		app:showAsAction="never" />
</menu>
