<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ImageView
		android:id="@+id/image"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@mipmap/katze"
		android:layout_alignParentTop="true"
		android:contentDescription="@string/cDMainPic"/>

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="50dp"
		android:layout_alignParentBottom="true">

		<Button
			android:id="@+id/bJa"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/yes"
			android:visibility="invisible" 
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:alpha="0.75"/>

		<Button
			android:id="@+id/bText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/showName"
			android:layout_toStartOf="@+id/bNein"
			android:layout_toLeftOf="@+id/bNein"
			android:layout_toEndOf="@id/bJa"
			android:layout_toRightOf="@id/bJa"
			android:alpha="1.0"/>

		<Button
			android:id="@id/bNein"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/no"
			android:visibility="invisible"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:alpha="0.75"/>
	</RelativeLayout>

</RelativeLayout>